- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 4.9.26-191-gb4efe74 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.91 - http://upx.sourceforge.net
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXXX - YYYYYYY
- Added ZIP SFX installer detection.
- Fixed a bug calling Ghostcript, that ignored parameters after dPDFSETTINGS which should made quality and size better (Skibicki #5).
- Disabled Leanify, and PNGout for APNG because the broke optimized files in some cases (Folding Home).
- Disabled ImageWorsener for WEBP, because it is not lossless (Skibicki #9).
- Added EPRT extension (Solid Works) to ZIP chain (maadjordan).
- Updated donation button to use Paypal.me so it can accept different currencies that euros (JoeW).
- Updated to ECT 0.4 x86 and x64 optimized builds (thanks Malloc Voidstar).
- Updated ImageMagick 7.0.1.5 with HDRI support.


8.30 - 2016/04/30
- Added UPX to the EXE/DLL tool chain (guindos98, necros).
- Added INI setting bEXEEnableUPX=false to enable UPX EXE compression. For instance bEXEEnableUPX=true will enable UPX processing (guindos98, necros).
- Added INI setting LeanifyIterations=-1 to specify desired Leanify iterations independantly of the compression level. For instance LeanifyIterations=128 will instruct Leanify to always use 128 iterations (necros).
- Added stereo extensions: MPO (Multi Picture Object), PNS (PNG Stereo) and JPS (JPEG Stereo).
- Added LXF extension (Lego Digital Designer) to ZIP chain (Jaff).
- Tweaked ECT invoking to make it get better compression ratios (Jaff).
- Fixed ECT execution it does not use -Mx but -x instead (fhanau).
- Fixed disable ZIP recurse handling in Leanify (Jaff).
- Fixed an Embarcadero's VCL bug that caused view modes in add files Windows common dialog show strange strings (JoeW).